--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,16 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
+# misc
 .DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.vscode
+.idea
+.vercel
+.notes
+.examples
+_ref_
