demo data fetch in react

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^1.2.2",
     "@observablehq/plot": "^0.6.0",
     "@radix-ui/react-slider": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.1",
     "@rehooks/local-storage": "^2.4.4",
     "astro": "^1.6.0",
     "clsx": "^1.2.1",
-    "match-sorter": "^6.3.1"
+    "match-sorter": "^6.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
