--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^1.2.2",
+    "@astrojs/solid-js": "^1.2.3",
     "@observablehq/plot": "^0.6.0",
     "@radix-ui/react-slider": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.1",
@@ -18,7 +18,6 @@
     "astro": "^1.6.0",
     "clsx": "^1.2.1",
     "match-sorter": "^6.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "solid-js": "^1.6.2"
   }
 }
