--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slider": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.1",
     "@rehooks/local-storage": "^2.4.4",
+    "@shoelace-style/shoelace": "^2.0.0-beta.85",
     "astro": "^1.6.0",
     "clsx": "^1.2.1",
     "match-sorter": "^6.3.1",
