--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@rehooks/local-storage": "^2.4.4",
     "@shoelace-style/shoelace": "^2.0.0-beta.85",
     "@solid-primitives/storage": "^1.3.3",
-    "astro": "^1.6.0",
+    "astro": "1.6.13",
     "clsx": "^1.2.1",
     "match-sorter": "^6.3.1",
     "solid-js": "^1.6.2"
